# mcp-metatrader5-server

./: README.md  main.py  mt5_server.py  mt5_server_market_data.py  mt5_server_trading.py  pyproject.toml  run.py  run_mcp_server.bat
.github/workflows/: publish-to-pypi.yml
docs/: getting_started.md  market_data_guide.md  publishing.md  trading_guide.md
src/mcp_metatrader5_server/: __init__.py  cli.py  economic_calendar.py  main.py  market_data.py  server.py  technical_analysis.py  trading.py
