[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-metatrader5-server"
version = "0.1.2"
description = "A Model Context Protocol (MCP) server for MetaTrader 5"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Abdul Qoyyuum"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "fastmcp>=0.4.1",
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
    "metatrader5>=5.0.4874",
    "pandas>=2.2.3",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
]

[project.urls]
"Homepage" = "https://github.com/Qoyyuum/mcp-metatrader5-server"
"Bug Tracker" = "https://github.com/Qoyyuum/mcp-metatrader5-server/issues"

[project.scripts]
mt5-mcp = "mcp_metatrader5_server.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
